fixed error in html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </head>
     <body>
         <script src="config.js"></script>
-        <script src="app.js"></script>
+        <script src="brewery.js"></script>
     </body>
 </html>
