consolidating all projects into one to finish first part of project

--- a/index.html
+++ b/index.html
@@ -1,30 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beer Test </title>
-    <link rel="stylesheet" href="beerStyleTest.css">
-</head>
-<body>
-    <h1>BEER SEARCH </h1>
-    <form>
-        <input name="searchInput" id="searchButn" type="text" class="searchB">
-        <button class="search-butn" type="submit">Search Brewery</button>
-    </form>
-    <div class="search-container">
-        <div class="breweryCard" id=""></div>
-    </div>
-    <script src="configTest.js"></script>
-    <script src="beerTest.js"></script>
-</body>
-</html>
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,8 +25,8 @@
         </div>
 
         <div class="container" id="container2">
-            <div class="card">
-                <h3 id="brew1">Sweetwater Brewing Co</h3>
+            <div class="breweryCard">
+                <h3 id="brew1">Placeholder Brewing Co</h3>
                 <p id="city1">City</p>
                 <p id="phone1">Phone</p>
             </div>
@@ -60,4 +35,4 @@
         <script src="config.js"></script>
         <script src="brewery.js"></script>
     </body>
-</html> -->
+</html>
