added city input, testing brewery db for city and state search

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             
             <h1>Where's the next adventure?</h1>
             <div class="form">
+                <input id="city-search" type="text" name="city-search" placeholder="Enter city name here...">
                 <input id="state-search" type="text" name="state-search" placeholder="Enter state name here...">
                 <button id="submit-btn" type="submit">Search</button>
                 <select id="per-page" name="per-page" >
