added footer with links, styling, added click sound, auto sizing of font

--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
             
         </div>
 
-        <script src="config.js"></script>
-        <script src="brewery.js"></script>
+            <script src="config.js"></script>
+            <script src="brewery.js"></script>
+        
+        <footer> Web Architects: 
+            <a href="https://github.com/sriveragithub"  style="color: #fdfbd1;" >Skyler</a>
+            <a href="https://github.com/Greenhouse89"   style="color: #fdfbd1;">Brandon</a>
+            <a href="https://github.com/jelissa2007"    style="color: #fdfbd1;">Jelissa</a>
+        </footer>
     </body>
 </html>
