--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <body>
         <div class="container" id="container1"  style="background-size:cover;">
             
-            <h1>Where's the next adventure?</h1>
+            <h1 >Barrel Hop</h1>
+            <h2>Where's the next adventure?</h2>
             <div class="form">
                 <input id="city-search" type="text" name="city-search" placeholder="Enter city name here...">
                 <input id="state-search" type="text" name="state-search" placeholder="Enter state name here...">
