included links and brewery types, reformatted cards, updated breakpoints, etc

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
                 <input id="state-search" type="text" name="state-search" placeholder="Enter state name here...">
                 <button id="submit-btn" type="submit">Search</button>
                 <select id="per-page" name="per-page" >
-                    <option value="5">5</option>
                     <option value="10">10</option>
                     <option value="20">20</option>
+                    <option value="40">40</option>
                     <option value="50">50</option>
                 </select>
             </div>
         </div>
 
         <div class="container" id="container2">
-            <h4 id="search-text">Search above!</h4>
+            <h4 id="search-text">Search for breweries above!</h4>
             <div class="container" id="card-container"></div>
         </div>
 
-            <script src="config.js"></script>
-            <script src="brewery.js"></script>
-        
         <footer> Web Architects: 
-            <a href="https://github.com/sriveragithub"  style="color: #fdfbd1;" >Skyler</a>
-            <a href="https://github.com/Greenhouse89"   style="color: #fdfbd1;">Brandon</a>
-            <a href="https://github.com/jelissa2007"    style="color: #fdfbd1;">Jelissa</a>
+            <a href="https://github.com/sriveragithub">Skyler</a>
+            <a href="https://github.com/Greenhouse89">Brandon</a>
+            <a href="https://github.com/jelissa2007">Jelissa</a>
         </footer>
+
+        <script src="config.js"></script>
+        <script src="brewery.js"></script>
     </body>
 </html>
