--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DC Front End Project</title>
+        <title>Barrel Hop - Brewery Search</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- Created a container that contains top of page with title, subtitle, search inputs, button and select for per-page -->
         <div class="container" id="container1"  style="background-size:cover;">
-            
-            <h1 >Barrel Hop</h1>
-            <h2>Where's the next adventure?</h2>
+            <h1 style="font-family: fantasy;">Barrel Hop</h1>
+            <h2 style="font-family: fantasy;">Where's the next adventure?</h2>
             <div class="form">
                 <input id="city-search" type="text" name="city-search" placeholder="Enter city name here...">
                 <input id="state-search" type="text" name="state-search" placeholder="Enter state name here...">
@@ -27,17 +26,20 @@
             </div>
         </div>
 
+        <!-- Created container for holds the cards/results that are generated from the Javascript functionality -->
         <div class="container" id="container2">
             <h4 id="search-text">Search for breweries above!</h4>
             <div class="container" id="card-container"></div>
         </div>
 
+        <!-- Footer that contains hyperlinks to our creator's github pages -->
         <footer> Web Architects: 
             <a href="https://github.com/sriveragithub">Skyler</a>
             <a href="https://github.com/Greenhouse89">Brandon</a>
             <a href="https://github.com/jelissa2007">Jelissa</a>
         </footer>
 
+        <!-- Loading our config and brewery scripts -->
         <script src="config.js"></script>
         <script src="brewery.js"></script>
     </body>
