fixed footer links so they open in new tabs

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <!-- Footer that contains hyperlinks to our creator's github pages -->
         <footer> Web Architects: 
-            <a href="https://github.com/sriveragithub">Skyler</a>
-            <a href="https://github.com/Greenhouse89">Brandon</a>
-            <a href="https://github.com/jelissa2007">Jelissa</a>
+            <a href="https://github.com/sriveragithub" target="_blank" rel="noopener noreferrer">Skyler</a>
+            <a href="https://github.com/Greenhouse89" target="_blank" rel="noopener noreferrer">Brandon</a>
+            <a href="https://github.com/jelissa2007" target="_blank" rel="noopener noreferrer">Jelissa</a>
         </footer>
 
         <!-- Loading our config and brewery scripts -->
